[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-dl-consolidator"
version = "0.1.0"
authors = [
  { name="Isac", email="isac@example.com" },
]
description = "A basic tool to consolidate LinkedIn contact and message CSV files into a JSON representation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "markdownify",
    "beautifulsoup4",
]

[project.scripts]
linkedin-consolidate = "linkedin_dl_consolidator.consolidator:run_from_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["linkedin_dl_consolidator*"]
